[package]
name = "thegraph"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde_json = "1.0.64"
gql_client = "0.2.1"
serde = {version = "1", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
