[package]
name = "thegraph"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.10", features = ["json"] }
anyhow = "1.0.39"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
serde_json = "1.0.81"
